added greetings, fixed exceptions
