# src/main/java/com/example/intergalactic_marketplace/web/GlobalExceptionHandler.java
@@ -2,6 +2,7 @@ package com.example.intergalactic_marketplace.web;
 
 import com.example.intergalactic_marketplace.service.exception.ProductAlreadyExistsException;
 import com.example.intergalactic_marketplace.service.exception.ProductNotFoundException;
+import com.example.intergalactic_marketplace.web.exception.GreetingNotFoundException;
 import com.example.intergalactic_marketplace.web.exception.ParamsViolationDetails;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpHeaders;
@@ -16,6 +17,7 @@ import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.net.URI;
+import java.time.Instant;
 import java.util.List;
 
 import static org.springframework.http.HttpStatus.CONFLICT;
@@ -24,12 +26,24 @@ import static org.springframework.http.HttpStatus.NOT_FOUND;
 @ControllerAdvice
 @Slf4j
 public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
+    @ExceptionHandler(GreetingNotFoundException.class)
+    ProblemDetail handleStoreConfigurationNotFoundException(GreetingNotFoundException ex) {
+        log.info("Greeting Not Found exception raised");
+        ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(NOT_FOUND, ex.getMessage());
+        problemDetail.setType(URI.create("greeting-not-found"));
+        problemDetail.setTitle("Greeting Not Found");
+        problemDetail.setProperty("timestamp", Instant.now());
+        return problemDetail;
+    }
+
+
     @ExceptionHandler(ProductNotFoundException.class)
     ProblemDetail handleNotFoundException(ProductNotFoundException ex) {
         log.info("Product Not Found exception raised");
         ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(NOT_FOUND, ex.getMessage());
         problemDetail.setType(URI.create("product-not-found"));
         problemDetail.setTitle("Product Not Found");
+        problemDetail.setProperty("timestamp", Instant.now());
         return problemDetail;
     }
 
@@ -39,6 +53,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
         ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(CONFLICT, ex.getMessage());
         problemDetail.setType(URI.create("product-already-exists"));
         problemDetail.setTitle("Product Already Exists");
+        problemDetail.setProperty("timestamp", Instant.now());
         return problemDetail;
     }
 
@@ -47,7 +62,15 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
         List<FieldError> fieldErrors = ex.getBindingResult().getFieldErrors();
         List<ParamsViolationDetails> validationResponse = fieldErrors.stream().map(err ->
                 ParamsViolationDetails.builder().reason(err.getDefaultMessage()).fieldName(err.getField()).build()).toList();
+
+        ProblemDetail problemDetail = ProblemDetail.forStatusAndDetail(statusCode, "Validation failed. Check 'errors' field for details.");
+        problemDetail.setTitle("Validation Failed");
+        problemDetail.setType(URI.create("validation-error"));
+        problemDetail.setProperty("timestamp", Instant.now());
+        problemDetail.setInstance(URI.create(request.getContextPath()));
+
         log.info("Validation error: {}", validationResponse);
-        return ResponseEntity.badRequest().body(validationResponse);
+
+        return ResponseEntity.status(statusCode).body(problemDetail);
     }
 }
